feat: update website

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,13 +1,20 @@
 ---
-title: Homepage
+title: A cranky video player for the Playdate
 layout: default
 permalink: /
 ---
-Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati est in illum temporibus aliquam recusandae consectetur, facilis laboriosam esse repellat voluptatum quae quos, eum culpa tempora quisquam! Cumque, maiores laborum.
 
-<ul>
-	<li><a href="/encoder/">Encoder</a></li>
-	<li><a href="/stream/">Stream</a></li>
-	<li><a href="/news/2023-09-28-hello-world/">Post</a></li>
-	<li><a href="/videos/sample/">Video</a></li>
+<div class="hero">
+	<h1>A Cranky Video Player for the Playdate</h1>
+</div>
+<ul class="features-list">
+	<li>
+		<b>Play with the crank!</b> Go faster or slower. Hit pause and go frame by frame.
+	</li>
+	<li>
+		Sideload your own <b>pre-encoded videos</b> or <a href="/videos/">download new videos here</a>.
+	</li>
+	<li>
+		Made exclusively for the Playdate and <a href="https://hteumeuleu.itch.io/playorama" target="_blank" rel="noopener">available on itch.io</a> since 2022.
+	</li>
 </ul>
