--- a/pages/videos.html
+++ b/pages/videos.html
@@ -1,11 +1,11 @@
 ---
-title: Stream
+title: Videos for Playdate
 layout: default
-permalink: /stream/
+permalink: /videos/
 ---
 <div style="text-align:center;">
 	<p>
-		<b>Stream</b> your computer screen or your webcam to your Playdate, right <b>from your browser</b>.
+		<b>Download</b> pre-encoded videos for Playorama.
 	</p>
 	<p>
 		 Coming later this year.
