--- a/pages/stream.html
+++ b/pages/stream.html
@@ -1,25 +1,28 @@
 ---
-title: Stream
+title: Stream to your Playdate
 layout: default
 permalink: /stream/
 ---
-<p class="warning">
-	<b>⚠︎ Warning!</b> This feature uses the <a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Serial_API#browser_compatibility">Web Serial API</a> which is not currently supported by your browser. ☹
-</p>
+<div class="notice">
+	<p>
+		<b>Stream</b> your computer screen or your webcam to your Playdate, right <b>from your browser</b>.
+	</p>
+</div>
 <div class="app">
 	<div class="screen">
 		<canvas class="pdv-preview-canvas" id="preview" width="400" height="240"></canvas>
 		<video class="pdv-preview-video" id="source" src="/assets/videos/sample.mp4" poster="/assets/images/sample.jpg" width="400" height="240" controls loop muted hidden playsinline disablepictureinpicture controlslist="nodownload nofullscreen noremoteplayback" preload="metadata" x-webkit-airplay="deny"></video>
 	</div>
 	<div class="toolbar">
-		<button type="button" onclick="connectToPlaydate()">Connect <span>&nbsp;to your Playdate</span></button>
-		<button type="button" onclick="sendBitmap()">Stream</button>
-		<button type="button" onclick="getCamera()">Webcam</button>
-		<button type="button">Screen</button>
+		<span>
+			<button type="button" class="pd-btn-stream">Start Streaming</button>
+		</span>
+		<span>
+			<button type="button" class="pd-btn-webcam button-black">Webcam</button>
+			<button type="button" class="pd-btn-screen button-black">Screen</button>
+		</span>
 	</div>
-	<div class="notice">
-		<p>
-			<b>Stream</b> your computer screen or your webcam to your Playdate, right <b>from your browser</b>.
-		</p>
-	</div>
+	<p class="warning">
+		<b>⚠︎ Warning!</b> This feature uses the <a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Serial_API#browser_compatibility">Web Serial API</a> which is not currently supported by your browser. ☹
+	</p>
 </div>
