--- a/pages/stream.html
+++ b/pages/stream.html
@@ -3,26 +3,28 @@ title: Stream to your Playdate
 layout: default
 permalink: /stream/
 ---
-<div class="notice">
-	<p>
-		<b>Stream</b> your computer screen or your webcam to your Playdate, right <b>from your browser</b>.
-	</p>
-</div>
 <div class="app">
-	<div class="screen">
-		<canvas class="pdv-preview-canvas" id="preview" width="400" height="240"></canvas>
-		<video class="pdv-preview-video" id="source" src="/assets/videos/sample.mp4" poster="/assets/images/sample.jpg" width="400" height="240" controls loop muted hidden playsinline disablepictureinpicture controlslist="nodownload nofullscreen noremoteplayback" preload="metadata" x-webkit-airplay="deny"></video>
+	<div class="app-notice">
+		<p>
+			<b>Stream</b> your computer screen or your webcam to your Playdate, right <b>from your browser</b>.
+		</p>
 	</div>
-	<div class="toolbar">
-		<span>
-			<button type="button" class="pd-btn-stream">Start Streaming</button>
-		</span>
-		<span>
-			<button type="button" class="pd-btn-webcam button-black">Webcam</button>
-			<button type="button" class="pd-btn-screen button-black">Screen</button>
-		</span>
+	<div class="app-preview">
+		<canvas class="app-preview-canvas" id="app-preview-canvas" width="400" height="240"></canvas>
+		<video class="app-preview-video" id="app-preview-video" src="/assets/videos/sample.mp4" poster="/assets/images/sample.jpg" width="400" height="240" controls loop muted hidden playsinline disablepictureinpicture controlslist="nodownload nofullscreen noremoteplayback" preload="metadata" x-webkit-airplay="deny"></video>
 	</div>
-	<p class="warning">
-		<b>⚠︎ Warning!</b> This feature uses the <a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Serial_API#browser_compatibility">Web Serial API</a> which is not currently supported by your browser. ☹
-	</p>
+	<div class="app-toolbar">
+		<div>
+			<button type="button" id="app-btn-webcam" class="btn">Webcam</button>
+			<button type="button" id="app-btn-screen" class="btn">Screen</button>
+		</div>
+		<div>
+			<button disabled type="button" id="app-btn-stream" class="btn btn--accent">Start Streaming</button>
+		</div>
+	</div>
+	<div class="app-warning" hidden>
+		<p>
+			<b>⚠︎ Warning!</b> This feature uses the <a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Serial_API#browser_compatibility">Web Serial API</a> which is not currently supported by your browser. ☹
+		</p>
+	</div>
 </div>
