feat: various fixes

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,5 +1,5 @@
 ---
-title: A cranky video player for the Playdate
+title: "Playorama: a cranky video player for the Playdate!"
 layout: default
 permalink: /
 ---
